k8s/frontemd-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: garden
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
